--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "olaf11071107@outlook.com",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/olaf11071107/olaf-loader.git"
+  },
+  "bugs": {
+    "url": "https://github.com/olaf11071107/olaf-loader/issues"
+  },
+  "homepage": "https://github.com/olaf11071107/olaf-loader#readme"
 }
