Enhance Olaf language compiler with new features and improvements - Added support for string interpolation, comments, constant variables, and array methods - Improved error handling and source map generation in the Webpack loader - Updated README to reflect new features - Bumped version to 1.1.4 and added new dependencies

--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "olaf-loader",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "main": "index.js",
   "description": "A Webpack loader for the Olaf language.",
   "keywords": [
     "webpack",
     "loader",
     "Olaf",
-    "compiler"
+    "compiler",
+    "transpiler",
+    "language",
+    "olaf-lang"
   ],
   "devDependencies": {
     "webpack": "^5.0.0"
   },
   "peerDependencies": {
     "webpack": "^5.0.0"
+  },
+  "dependencies": {
+    "loader-utils": "^2.0.0",
+    "source-map": "^0.7.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
